eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-submission-api-service
spec:
  selector:
    app: app-submission-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
