eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: lifeai-nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-submission-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: lifeai-nginx
  rules:
  - host: "api.lifeai.us"
    http:
      paths:
      - pathType: Prefix
        path: "/backend/healthai"
        backend:
          service:
            name: health-api-service
            port:
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-submission-api-service
            port:
              number: 80
  tls:
  - hosts:
    - api.lifeai.us
    secretName: lifeai-api-cert
